--- a/app/views/preliminary/CheckYourAnswersView.scala.html
+++ b/app/views/preliminary/CheckYourAnswersView.scala.html
@@ -14,11 +14,14 @@
  * limitations under the License.
  *@
 
+@import views.html.components.h1
+
 @this(
         layout: templates.Layout,
         govukSummaryList: GovukSummaryList,
         govukButton: GovukButton,
-        formHelper: FormWithCSRF
+        formHelper: FormWithCSRF,
+        h1: h1
 )
 
 @(list: SummaryList)(implicit request: Request[_], messages: Messages)
@@ -26,7 +29,7 @@
 @layout(pageTitle = titleNoForm(messages("prelim.checkYourAnswers.title"))) {
     @formHelper(action = controllers.preliminary.routes.CheckYourAnswersController.onSubmit()) {
 
-        <h1 class="govuk-heading-l">@messages("site.checkYourAnswers.heading")</h1>
+        @h1(messages("site.checkYourAnswers.heading"))
 
         @govukSummaryList(list.withCssClass("govuk-!-margin-bottom-9"))
 
