--- a/app/views/purchaser/DoesPurchaserHaveNIView.scala.html
+++ b/app/views/purchaser/DoesPurchaserHaveNIView.scala.html
@@ -16,13 +16,15 @@
 
 @import viewmodels.LegendSize.Large
 @import models.purchaser.DoesPurchaserHaveNI
+@import views.html.components.Caption
 
 @this(
         layout: templates.Layout,
         formHelper: FormWithCSRF,
         govukErrorSummary: GovukErrorSummary,
         govukRadios: GovukRadios,
-        govukButton: GovukButton
+        govukButton: GovukButton,
+        caption: Caption
 )
 
 @(form: Form[_], mode: Mode, purchaserName: String)(implicit request: Request[_], messages: Messages)
@@ -34,7 +36,9 @@
         @if(form.errors.nonEmpty) {
             @govukErrorSummary(ErrorSummaryViewModel(form, errorLinkOverrides = Map("value" -> "value_0")))
         }
-        <span class="govuk-caption-l">@messages("site.purchaser.caption")</span>
+
+        @caption(messages("site.purchaser.caption"))
+
         @govukRadios(
             RadiosViewModel(
                 field = form("value"),
