--- a/app/views/purchaser/PurchaserCorporationTaxUTRView.scala.html
+++ b/app/views/purchaser/PurchaserCorporationTaxUTRView.scala.html
@@ -16,8 +16,7 @@
 
 @import viewmodels.InputWidth._
 @import viewmodels.LabelSize.Medium
-@import views.html.components.h1
-@import views.html.components.p
+@import views.html.components._
 
 @this(
     layout: templates.Layout,
@@ -25,8 +24,9 @@
     govukErrorSummary: GovukErrorSummary,
     govukInput: GovukInput,
     govukButton: GovukButton,
-        h1: h1,
-        p:p
+    h1: h1,
+    p: Paragraph,
+    caption: Caption
 )
 
 @(form: Form[_], purchaserName: String, mode: Mode)(implicit request: Request[_], messages: Messages)
@@ -39,14 +39,16 @@
             @govukErrorSummary(ErrorSummaryViewModel(form))
         }
 
-        <div class="govuk-caption-l">@messages("site.purchaser.caption")</div>
+        @caption(messages("site.purchaser.caption"))
+
         @h1(messages("purchaser.corporationTaxUTR.h1", purchaserName))
-        @p(Html(messages("purchaser.corporationTaxUTR.p")))
+
+        @p(messages("purchaser.corporationTaxUTR.p"))
 
         @govukInput(
             InputViewModel(
                 field = form("value"),
-                label = LabelViewModel(messages("purchaser.corporationTaxUTR.h2", purchaserName)).asPageHeading(size = Medium)
+                label = LabelViewModel(messages("purchaser.corporationTaxUTR.h2", purchaserName)).asPageSubHeading()
             )
             .withWidth(Full)
             .withHint(HintViewModel(HtmlContent(Html(messages("purchaser.corporationTaxUTR.hint")))))
