--- a/app/views/purchaser/PurchaserDateOfBirthView.scala.html
+++ b/app/views/purchaser/PurchaserDateOfBirthView.scala.html
@@ -14,24 +14,28 @@
  * limitations under the License.
  *@
 
+@import views.html.components.Caption
+
 @this(
         layout: templates.Layout,
         formHelper: FormWithCSRF,
         govukErrorSummary: GovukErrorSummary,
         govukDateInput: GovukDateInput,
-        govukButton: GovukButton
+        govukButton: GovukButton,
+        caption: Caption
 )
 
 @(form: Form[_], purchaserName: String, mode: Mode)(implicit request: Request[_], messages: Messages)
 
 @layout(pageTitle = title(form, messages("purchaser.dateOfBirth.title"))) {
-    <div class="govuk-caption-l">@messages("site.purchaser.caption")</div>
 
     @formHelper(action = controllers.purchaser.routes.PurchaserDateOfBirthController.onSubmit(mode), Symbol("autoComplete") -> "off") {
 
         @if(form.errors.nonEmpty) {
             @govukErrorSummary(ErrorSummaryViewModel(form, errorLinkOverrides = Map("value" -> "value.day")))
         }
+
+        @caption(messages("site.purchaser.caption"))
 
         @govukDateInput(
             DateViewModel(
