--- a/app/views/purchaser/RegistrationNumberView.scala.html
+++ b/app/views/purchaser/RegistrationNumberView.scala.html
@@ -16,13 +16,15 @@
 
 @import viewmodels.InputWidth._
 @import viewmodels.LabelSize.Large
+@import views.html.components.Caption
 
 @this(
         layout: templates.Layout,
         formHelper: FormWithCSRF,
         govukErrorSummary: GovukErrorSummary,
         govukInput: GovukInput,
-        govukButton: GovukButton
+        govukButton: GovukButton,
+        caption: Caption
 )
 
 @(form: Form[_], mode: Mode, purchaserName: String)(implicit request: Request[_], messages: Messages)
@@ -34,7 +36,8 @@
         @if(form.errors.nonEmpty) {
             @govukErrorSummary(ErrorSummaryViewModel(form))
         }
-        <span class="govuk-caption-l">@messages("site.purchaser.caption")</span>
+
+        @caption(messages("site.purchaser.caption"))
 
         @govukInput(
             InputViewModel(
