--- a/app/views/purchaser/WhoIsMakingThePurchaseView.scala.html
+++ b/app/views/purchaser/WhoIsMakingThePurchaseView.scala.html
@@ -15,26 +15,29 @@
  *@
 
 @import models.purchaser.WhoIsMakingThePurchase
+@import views.html.components.Caption
 
 @this(
         layout: templates.Layout,
         formHelper: FormWithCSRF,
         govukErrorSummary: GovukErrorSummary,
         govukRadios: GovukRadios,
-        govukButton: GovukButton
+        govukButton: GovukButton,
+        caption: Caption
 )
 
 
 @(form: Form[_], mode: Mode)(implicit request: Request[_], messages: Messages)
 
 @layout(pageTitle = title(form, messages("purchaser.whoIsMakingThePurchase.title"))) {
-    <div class="govuk-caption-l">@messages("site.purchaser.caption")</div>
 
     @formHelper(action = controllers.purchaser.routes.WhoIsMakingThePurchaseController.onSubmit(mode), Symbol("autoComplete") -> "off") {
 
         @if(form.errors.nonEmpty) {
             @govukErrorSummary(ErrorSummaryViewModel(form, errorLinkOverrides = Map("value" -> "value_0")))
         }
+
+        @caption(messages("site.purchaser.caption"))
 
         @govukRadios(
             RadiosViewModel(
