--- a/app/views/purchaser/PurchaserConfirmIdentityView.scala.html
+++ b/app/views/purchaser/PurchaserConfirmIdentityView.scala.html
@@ -15,13 +15,16 @@
  *@
 
 @import models.purchaser.PurchaserConfirmIdentity
-@import views.html.components.h1
+@import views.html.components._
+
 @this(
     layout: templates.Layout,
     formHelper: FormWithCSRF,
     govukErrorSummary: GovukErrorSummary,
     govukRadios: GovukRadios,
     govukButton: GovukButton,
+    caption: Caption,
+    p: Paragraph,
     h1: h1
 )
 
@@ -35,15 +38,15 @@
         @if(form.errors.nonEmpty) {
             @govukErrorSummary(ErrorSummaryViewModel(form,  errorLinkOverrides = Map("value" -> "value_0")))
         }
-        <span class="govuk-caption-l">@messages("site.purchaser.caption")</span>
-        @h1(messages("purchaser.confirmIdentity.heading", purchaserName))
+
+        @caption(messages("site.purchaser.caption"))
 
         @govukRadios(
             RadiosViewModel(
                 field  = form("value"),
-                legend = LegendViewModel(messages("purchaser.confirmIdentity.p1", purchaserName)),
+                legend = LegendViewModel(messages("purchaser.confirmIdentity.heading", purchaserName)).asPageHeading(),
                 items  = PurchaserConfirmIdentity.options
-            )
+            ).withHint(HintViewModel(HtmlContent(Html(messages("purchaser.confirmIdentity.hint", purchaserName)))))
         )
 
         @govukButton(
