DTR-2072: Reverts import in link html

--- a/app/views/components/link.scala.html
+++ b/app/views/components/link.scala.html
@@ -14,7 +14,7 @@
  * limitations under the License.
  *@
 
-@import uk.gov.hmrc.govukfrontend.views.html.components.toClasses as govukToClasses
+@import uk.gov.hmrc.govukfrontend.views.html.components.{toClasses => govukToClasses}
 
 @this()
 
