DTR-1823 address PR comments

--- a/app/views/purchaserAgent/PurchaserAgentBeforeYouStartView.scala.html
+++ b/app/views/purchaserAgent/PurchaserAgentBeforeYouStartView.scala.html
@@ -39,7 +39,7 @@
             @govukErrorSummary(ErrorSummaryViewModel(form))
         }
 
-        @caption(messages("site.purchaserAgent.caption"))
+        @caption(messages("site.purchaserAgent.beforeStart.caption"))
         @h1(messages("purchaserAgent.BeforeYouStart.heading"))
         @p(messages("purchaserAgent.BeforeYouStart.p1"))
         <ul class="govuk-list govuk-list--bullet">
