--- a/app/views/purchaserAgent/PurchaserAgentBeforeYouStartView.scala.html
+++ b/app/views/purchaserAgent/PurchaserAgentBeforeYouStartView.scala.html
@@ -18,14 +18,14 @@
 @import viewmodels.LegendSize.Medium
 
 @this(
-    layout: templates.Layout,
-    formHelper: FormWithCSRF,
-    govukErrorSummary: GovukErrorSummary,
-    govukRadios: GovukRadios,
-    govukButton: GovukButton,
-    caption: Caption,
-    h1:h1,
-    p: Paragraph
+        layout: templates.Layout,
+        formHelper: FormWithCSRF,
+        govukErrorSummary: GovukErrorSummary,
+        govukRadios: GovukRadios,
+        govukButton: GovukButton,
+        caption: Caption,
+        h1: h1,
+        p: Paragraph
 )
 
 @(form: Form[_], mode: Mode)(implicit request: Request[_], messages: Messages)
@@ -39,7 +39,7 @@
             @govukErrorSummary(ErrorSummaryViewModel(form))
         }
 
-        @caption(messages("site.purchaserAgent.caption"))
+        @caption(messages("site.purchaserAgent.beforeStart.caption"))
         @h1(messages("purchaserAgent.BeforeYouStart.heading"))
         @p(messages("purchaserAgent.BeforeYouStart.p1"))
         <ul class="govuk-list govuk-list--bullet">
