--- a/app/views/purchaser/IsPurchaserActingAsTrusteeView.scala.html
+++ b/app/views/purchaser/IsPurchaserActingAsTrusteeView.scala.html
@@ -37,7 +37,7 @@ caption: Caption
 @govukErrorSummary(ErrorSummaryViewModel(form,  errorLinkOverrides = Map("value" -> "value_0")))
 }
 
-@caption(messages("site.purchaser.caption"))
+@caption(messages("addContactDetailsForPurchaserAgent.caption"))
 
 @govukRadios(
 RadiosViewModel(
