--- a/app/views/purchaserAgent/AddPurchaserAgentReferenceNumberView.scala.html
+++ b/app/views/purchaserAgent/AddPurchaserAgentReferenceNumberView.scala.html
@@ -33,7 +33,7 @@
     @formHelper(action = controllers.purchaserAgent.routes.AddPurchaserAgentReferenceNumberController.onSubmit(mode), Symbol("autoComplete") -> "off") {
 
         @if(form.errors.nonEmpty) {
-            @govukErrorSummary(ErrorSummaryViewModel(form, errorLinkOverrides = Map("value" -> "value_0")))
+            @govukErrorSummary(ErrorSummaryViewModel(form))
         }
 
         @caption(messages("site.purchaserAgent.caption"))
