--- a/app/views/purchaserAgent/SelectPurchaserAgentView.scala.html
+++ b/app/views/purchaserAgent/SelectPurchaserAgentView.scala.html
@@ -37,7 +37,7 @@
     @formHelper(action = controllers.purchaserAgent.routes.SelectPurchaserAgentController.onSubmit(mode), Symbol("autoComplete") -> "off") {
 
         @if(form.errors.nonEmpty) {
-            @govukErrorSummary(ErrorSummaryViewModel(form, errorLinkOverrides = Map("value" -> "value_0")))
+            @govukErrorSummary(ErrorSummaryViewModel(form))
         }
 
         @caption(messages("site.purchaserAgent.caption"))
