--- a/app/views/purchaserAgent/PurchaserAgentOverview.scala.html
+++ b/app/views/purchaserAgent/PurchaserAgentOverview.scala.html
@@ -39,7 +39,7 @@
         errorCalc: Boolean
 )(implicit request: Request[_], messages: Messages)
 
-@layout(pageTitle = titleNoForm(messages("purchaserAgent.overview.title"))) {
+@layout(pageTitle = title(form, messages("purchaserAgent.overview.title"))) {
 
     @request.flash.get("purchaserLimitReached").map { _ =>
         @govukErrorSummary(
