--- a/app/views/purchaserAgent/PurchaserAgentOverview.scala.html
+++ b/app/views/purchaserAgent/PurchaserAgentOverview.scala.html
@@ -33,10 +33,8 @@
 
 @(
         maybeSummaryList: Option[SummaryList],
-        postAction: Call,
-        form: play.api.data.Form[Boolean],
-        mode: models.Mode,
-        errorCalc: Boolean
+        form: Form[_],
+        mode: Mode
 )(implicit request: Request[_], messages: Messages)
 
 @layout(pageTitle = title(form, messages("purchaserAgent.overview.title"))) {
@@ -70,7 +68,7 @@
         )
     }
 
-    @formHelper(action = postAction, Symbol("autoComplete") -> "off") {
+    @formHelper(action = controllers.purchaserAgent.routes.PurchaserAgentOverviewController.onSubmit(), Symbol("autoComplete") -> "off") {
         @if(form.errors.nonEmpty) {
             @govukErrorSummary(ErrorSummaryViewModel(form))
         }
@@ -82,16 +80,11 @@
             case Some(summary) => {
                 @govukSummaryList(summary)
 
-                @if(errorCalc) {
-                    @govukButton(
-                        ButtonViewModel(messages("site.continue"))
-                    )
-                } else {
-                    @govukButton(
-                        ButtonViewModel(messages("site.continue"))
-                    )
-                }
+                @govukButton(
+                    ButtonViewModel(messages("site.continue"))
+                )
             }
+
             case None => {
                 @p(messages("purchaserAgent.overview.noPurchaser.p1"))
 
